# rssh

./: CHANGELOG.md  Cargo.toml  README.md
.github/scripts/: test.sh
.github/workflows/: release.yaml  test.yaml
src/: action.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/rssh_core/: args.rs  client.rs  mod.rs
