[package]
name = "rssh"
version = "0.0.1-alpha6"
edition = "2021"
authors = ["Louis <836250617@qq.com>"]
description = "A ssh tool which \"remember\"s your ssh history for faster connection."
license = "MIT"
keywords = ["ssh", "cli tool"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5.9", features = ["derive"] }
snafu = { version = "0.8.4" }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
const_format = "0.2"
cliclack = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
encrypt_config = { version = "0.3", features = [
    "full",
    "default_config_dir",
    "linux-secret-service",
] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
encrypt_config = { version = "0.3", features = ["full", "default_config_dir"] }

[profile.dev.package.num-bigint-dig]
opt-level = 3

[build-dependencies]
vergen = { version = "8.3", features = ["git", "rustc", "gitcl"] }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
